@startuml
' 隱藏圓點，避免與連結線衝突
hide circle
' 設定線條為正交直線
skinparam linetype ortho

' 繼承 django AbstractUse當作每個person
abstract class AbstractUser {
    + username
    + password
    + first_name
    + last_name
    + email
    + is_staff
    + is_active
    + is_superuser
    + last_login
    + date_joined
    + groups : manyToManyField
    + user_permissions : manyToManyField
}

class "User" as User {
    + username : {derived} {None}
    + email : {derived} {unique}
    --
    + full_name : String
    + date_of_birth : Date {optional}
    + avatar : Image {optional}
    + created_at : DateTime {auto_now_add=True}
    + updated_at : DateTime {auto_now=True}

    + phone : Str {optional}
    + is_verified : Bool {default=False}
}
AbstractUser <|-- User

abstract class "models.Model" as modelsModel {
    << Framework >>
}

abstract class "TimeStampedModel" as TimeStampedModel {
    + created_at : DateTime { auto_now_add=True}
    + updated_at : DateTime { auto_now=True }
    --
    Meta : abstract=True
}

abstract class "SoftDeleteModel" as SoftDeleteModel {
    + deleted_at: DateTime {nullable, indexed}
    --
    + delete()
    + hard_delete()
    --
    Meta: abstract=True
}

class "Location" as Location {
    + name : CharField
    + address : CharField
    + latitude : DecimalField
    + longitude : DecimalField
}

' ------ 隊伍 ------

class "Team" as Team {
    + name : String
    + creator_id : <<FK>>
    + leader_id : <<FK>> {nullable}
    + coach_id : <<FK>> {nullable}
}

class "TeamMember" as TeamMember {
    + team_id : << FK >>
    + user_id : << FK >>
    --
    { unique_together = ('team_id', 'user_id')}
}

' ------ 比賽 ------
class "Event" as Event {
    + location : << FK >>
    + name : String
    + event_type : Enum{Tournament, League, Friendly}
    + start_time : DateTime
    + end_time : DateTime
}

class "EventTeam" as EventTeam {
    + event_id : << FK >>
    + team_id : << FK >>
    --
    + coach_id : << FK >> {nullable}
    + leader_id : << FK >> {nullable}
    + status : Enum {Pending, Approved, Rejected}
    --
    unique_together = (event_id, team_id)
}


class "EventTeamMember" as EventTeamMember {
    + event_team_id : << FK >>
    + user_id : << FK >>
    + is_player : Bool
    + is_coach : Bool
    + is_staff : Bool
    --
    { unique_together = ('event_team_id', 'user_id') }
}

class "LunchOption" as LunchOption {
    + event_id : << FK to Event >>
    + name : String
}

class "RegistrationLunchOrder" as RegistrationLunchOrder {
    + member_id : << FK to EventTeamMember >>
    + option_id : << FK to LunchOption >>
    + quantity : Int
    + note : Text
}

'-- Match Models

abstract class "BaseMatchConfiguration" as BaseMatchConfiguration {
    + format : Enum {Single, Double}
    + requirement : String
    --
    Meta: abstract = True
}


abstract class "BaseMatch" as BaseMatch {
    + date : Date
    + time : Time
    + number : Int
    + status : Enum {Scheduled, InProgress, Completed, Cancelled}
    + winner : Enum {TeamA, TeamB, Draw}
    --
    Meta: abstract=True
}

class "TeamMatch" as TeamMatch {
    + team_a_id : << FK to EventTeam >>
    + team_b_id : << FK to EventTeam >>
    --
    Meta: constraints: team_a_id < team_b_id
}

class "PlayerMatch" as PlayerMatch {
    + team_match : << FK to TeamMatch >>
    --
    + { unique_together = ('team_match', 'number')}
}

class "MatchSet" as MatchSet {
    + player_match : << FK to PlayerMatch >>
    + set_number : Int
    + score_a : Int
    + score_b : Int
    --
    { unique_together = ('player_match', 'set_number')}
}

class "PlayerMatchParticipant" as PlayerMatchParticipant {
    + player_match : << FK PlayerMatch >>
    + player : << FK to User >>
    --
    + side : Enum {A, B}
    + position : Int {default=1}
    --
    unique_together = (player_match, player)
    unique_together = (player_match, side, position)
    check = (position in [1, 2])
}

class "MatchTemplate" as MatchTemplate {
    + name : Str
    + creator : << FK to User >>
}

class "MatchTemplateItem" as MatchTemplateItem {
    + template : << FK to MatchTemplate >>
    + number : Int
}

class "EventMatchConfiguration" as EventMatchConfiguration {
    + event : << OneToOne to Event >>
    + template : << FK to MatchTemplate >>
    + rule_config : JSON
    ' {
    '   winning_sets: 3,
    '   team_winning_points: 3,
    '   play_all_sets: bool,
    '   play_all_matches: bool,
    '   count_points_by_sets: bool
    ' }
}


' ------- 關係線 -------
modelsModel <|-- TimeStampedModel
TimeStampedModel <|-- SoftDeleteModel

TimeStampedModel <|-- TeamMember
TimeStampedModel <|-- EventTeam
TimeStampedModel <|-- EventTeamMember
TimeStampedModel <|-- MatchTemplate
TimeStampedModel <|-- MatchTemplateItem
TimeStampedModel <|-- MatchSet
TimeStampedModel <|-- PlayerMatchParticipant
TimeStampedModel <|-- EventMatchConfiguration
TimeStampedModel <|-- LunchOption
TimeStampedModel <|-- RegistrationLunchOrder

SoftDeleteModel <|-- Team 
SoftDeleteModel <|-- Event
SoftDeleteModel <|-- BaseMatch

BaseMatchConfiguration <|-- PlayerMatch
BaseMatchConfiguration <|-- MatchTemplateItem

BaseMatch <|-- PlayerMatch
BaseMatch <|-- TeamMatch


Event "1" -- "*" EventTeam
Team "1" -- "*" EventTeam

Location "1" -- "*" Event

EventTeam "1" -- "*" EventTeamMember
User  "1" -- "*" EventTeamMember

User "1" -- "*" Team : leader
User "1" -- "*" Team : coach
User "1" -- "*" Team : creator

User "1" -- "*" TeamMember
Team "1" -- "*" TeamMember

EventTeam "1" -- "*" TeamMatch : teamA
EventTeam "1" -- "*" TeamMatch : teamB

TeamMatch "1" -- "*" PlayerMatch

PlayerMatch "1" -- "*" MatchSet
PlayerMatch "1" -- "*" PlayerMatchParticipant
User "1" -- "*" PlayerMatchParticipant

MatchTemplate "1" -- "*" MatchTemplateItem
MatchTemplate "1" -- "*" EventMatchConfiguration
Event "1" -- "1" EventMatchConfiguration
Event "1" -- "*" LunchOption
EventTeamMember "1" -- "*" RegistrationLunchOrder
LunchOption "1" -- "*" RegistrationLunchOrder

@enduml
